--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-target/*
-src/main/java/model/Config.java
+
+*.class
+*.jar
+
 *~
+
+target/**
+src/main/java/model/Config.java
